--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
-html, body
- {
-  margin: 0; 
-  height: 100%; 
-  overflow: hidden;
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 canvas
