--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-html, body {
-    max-width: 100%;
-    overflow-x: hidden;
-    overflow-y: hidden;
+html, #body {
+  max-width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  background-color: rgb(215, 233, 233);
 }
 
 canvas
 {
   border: 1px solid red; 
+  background-color: white;
 }
