--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ html, #body {
   overflow-x: hidden;
   overflow-y: hidden;
   background-color: rgb(215, 233, 233);
+  padding: 0;
+  margin: 0;
 }
 
 canvas
